--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@
 #discover .img img {
   flex-basis: 50%;
   height: 100%;
-  width: 760px;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -222,12 +222,15 @@
   justify-content: center;
   align-items: center;
 }
-#gifts .img img {
+#gifts .img {
   flex-basis: 50%;
-  height: 55%;
-  width: 760px;
-  background-size: contain;
+  height: 100%;
+  width: 100%;
+  background-size: 100% 100vh;
   background-repeat: no-repeat;
+}
+#gifts .img img {
+  width: 100%;
 }
 #gifts .content {
   padding: 0 10% 0 10%;
