--- a/style.scss
+++ b/style.scss
@@ -219,25 +219,27 @@
     .img img{
         flex-basis: 50%;
         height: 100%;
-        width: 760px;
+        width: 100%;
         background-size: cover;
         background-repeat: no-repeat;
     }
 }
 #gifts {
-    // margin-top: 5%;
     min-width: 100%;
     max-height: fit-content;
     background-color: #3B0073;
     display: flex;
     justify-content: center;
     align-items: center;
-    .img img{
+    .img {
         flex-basis: 50%;
-        height: 55%;
-        width: 760px;
-        background-size: contain;
+        height: 100%;
+        width: 100%;
+        background-size: 100% 100vh ;
         background-repeat: no-repeat;
+        img {
+            width: 100%;
+        }
     }
     .content {
         padding: 0 10% 0 10%;
