--- a/style.css
+++ b/style.css
@@ -204,12 +204,15 @@
   letter-spacing: 1px;
   font-size: 140%;
 }
-#discover .img img {
+#discover .img {
   flex-basis: 50%;
   height: 100%;
   width: 100%;
-  background-size: cover;
+  background-size: 100% 100vh;
   background-repeat: no-repeat;
+}
+#discover .img img {
+  width: 100%;
 }
 
 #gifts {
