--- a/style.scss
+++ b/style.scss
@@ -215,12 +215,15 @@
         }
 
     }
-    .img img{
+    .img {
         flex-basis: 50%;
         height: 100%;
         width: 100%;
-        background-size: cover;
+        background-size: 100% 100vh ;
         background-repeat: no-repeat;
+        img {
+            width: 100%;
+        }
     }
 }
 #gifts {
