--- a/media.css
+++ b/media.css
@@ -265,7 +265,16 @@
     text-align: center;
     padding: 5% 0;
   }
-  #footer .foot3 .b {
-    display: none;
+  #footer .foot3 .b ul {
+    flex-wrap: wrap;
+    display: block;
+    padding-right: 50px;
+    font-size: 30px;
+    float: left;
+  }
+  #footer .foot3 .b ul li {
+    padding: 5%;
+    margin-left: 20%;
+    align-self: center;
   }
 }/*# sourceMappingURL=media.css.map */
