--- a/media.scss
+++ b/media.scss
@@ -284,8 +284,18 @@
                 padding: 5% 0;
 
             }
-            .b{
-                display: none;
+            .b ul{
+                // display: none;
+                flex-wrap: wrap;
+                display: block;
+                padding-right: 50px;
+                font-size: 30px;
+                float: left;
+                li {
+                    padding: 5%;
+                    margin-left: 20%;
+                    align-self: center;
+                }
             }
         }
     }
